--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "world-engine",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,19 +10,25 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.4",
+    "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.19.2",
+    "html-react-parser": "^5.2.14",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^20.19.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "prisma": "^6.19.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
