feat: Adding rich-text editing

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.19.2",
+    "@tiptap/extension-link": "^3.18.0",
+    "@tiptap/react": "^3.18.0",
+    "@tiptap/starter-kit": "^3.18.0",
     "html-react-parser": "^5.2.14",
     "next": "^16.1.6",
     "react": "19.2.3",
