--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.19.2",
     "@tiptap/extension-link": "^3.18.0",
+    "@tiptap/extension-mention": "^3.18.0",
     "@tiptap/react": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
     "html-react-parser": "^5.2.14",
     "next": "^16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
