--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.19.2",
     "@tiptap/extension-link": "^3.18.0",
@@ -18,6 +19,7 @@
     "@tiptap/starter-kit": "^3.18.0",
     "html-react-parser": "^5.2.14",
     "next": "^16.1.6",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tippy.js": "^6.3.7"
