--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@types/react-dom": "^19",
     "@types/turndown": "^5.0.6",
     "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.4",
+    "eslint": "^4.1.1",
+    "eslint-config-next": "^0.2.4",
     "prisma": "^6.19.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
